# MicroAgent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: basic_usage.py  calc.py  micro_agent_s01.py  micro_agent_s02.py  micro_agent_s03.py  micro_agent_s04.py  micro_agent_s05.py  micro_agent_s06.py
src/microagent/: __init__.py  cli.py
src/microagent/core/: __init__.py  agent.py  memory.py  tool.py
src/microagent/llm/: provider.py
src/microagent/utils/: __init__.py  config.py  logging.py
tests/: test_agent.py  test_memory.py  test_tool.py
